# hacker-news-alert-chatgpt-discord

./: .gitignore  Cargo.toml  README.md  embed.json  js.embed.json  js.message.json  test.html  webhook.json
src/: lib.rs
